--- a/projects/integrate/admin/application/toolbox/tabs/tabs.component.html
+++ b/projects/integrate/admin/application/toolbox/tabs/tabs.component.html
@@ -10,6 +10,9 @@
       <nz-tab>
         <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'toolbox', 'collector']"> 日志采集 </a>
       </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'toolbox', 'monitor']"> 监控 </a>
+      </nz-tab>
     </nz-tabset>
   </nz-card-tab>
 
