--- a/projects/integrate/center/work/work.component.html
+++ b/projects/integrate/center/work/work.component.html
@@ -62,7 +62,7 @@
         </span>
       </nz-space>
       <nz-divider></nz-divider>
-      <app-workbench-state></app-workbench-state>
+      <wpx-workbench-state></wpx-workbench-state>
     </nz-card>
   </nz-col>
   <nz-col [nzSpan]="16">
