--- a/projects/integrate/admin/application/functions/cloud/platform/platform.component.html
+++ b/projects/integrate/admin/application/functions/cloud/platform/platform.component.html
@@ -2,7 +2,7 @@
   <nz-form-item>
     <nz-form-label nzRequired>服务商</nz-form-label>
     <nz-form-control>
-      <nz-radio-group formControlName="cloud_platform">
+      <nz-radio-group formControlName="cloud">
         <label nz-radio nzValue="tencent">
           <img height="20px" [src]="['assets', 'cloud', 'tencent.svg'] | wpxAssets" alt="" />
         </label>
