--- a/projects/integrate/admin/application/functions/office/platform/platform.component.html
+++ b/projects/integrate/admin/application/functions/office/platform/platform.component.html
@@ -2,7 +2,7 @@
   <nz-form-item>
     <nz-form-label nzRequired>第三方平台</nz-form-label>
     <nz-form-control>
-      <nz-radio-group formControlName="office_platform">
+      <nz-radio-group formControlName="office">
         <label nz-radio nzValue="feishu">
           <nz-avatar
             nzShape="square"
