--- a/projects/integrate/admin/application/factory/schema/schema.component.html
+++ b/projects/integrate/admin/application/factory/schema/schema.component.html
@@ -12,16 +12,16 @@
   >
     <thead>
       <tr>
-        <th nzWidth="50px" nzLeft nzAlign="center"> </th>
-        <th nzWidth="320px" nzLeft><b>定义</b></th>
-        <th><b>描述</b></th>
-        <th nzWidth="50px" nzRight nzAlign="center"><b>操作</b></th>
+        <th nzWidth="36px" nzLeft nzAlign="center"> </th>
+        <th nzWidth="320px" nzLeft><b>字段</b></th>
+        <th><b>属性</b></th>
+        <th nzWidth="36px" nzRight nzAlign="center"></th>
       </tr>
     </thead>
     <tbody cdkDropList (cdkDropListDropped)="sort($event)">
       <tr *ngFor="let data of contentTable.data" cdkDrag>
         <td nzLeft nzAlign="center">
-          <button nz-button nzType="dashed" nzShape="circle" cdkDragHandle>
+          <button nz-button nzType="text" cdkDragHandle>
             <i nz-icon nzType="drag"></i>
           </button>
         </td>
