更新: 动态配置管理

--- a/projects/integrate/admin/security/policy/ip-lock/ip-lock.component.html
+++ b/projects/integrate/admin/security/policy/ip-lock/ip-lock.component.html
@@ -11,7 +11,7 @@
     >
       <nz-input-number
         style="width: 100%"
-        formControlName="ip_login_failed_times"
+        formControlName="ip_login_failures"
         [nzFormatter]="formatterTimes"
         [nzMin]="1"
         [nzStep]="1"
