--- a/projects/integrate/admin/security/policy/pwd-strategy/pwd-strategy.component.html
+++ b/projects/integrate/admin/security/policy/pwd-strategy/pwd-strategy.component.html
@@ -2,7 +2,7 @@
   <nz-form-item>
     <nz-form-label nzRequired>密码强度</nz-form-label>
     <nz-form-control>
-      <nz-radio-group formControlName="password_strength">
+      <nz-radio-group formControlName="pwd_strategy">
         <label nz-radio [nzValue]="0">无限制。</label>
         <label nz-radio [nzValue]="1">需要大写字母和小写字母。</label>
         <label nz-radio [nzValue]="2">需要大写字母、小写字母和数字。</label>
