--- a/projects/integrate/admin/security/policy/pwd-ttl/pwd-ttl.component.html
+++ b/projects/integrate/admin/security/policy/pwd-ttl/pwd-ttl.component.html
@@ -12,7 +12,7 @@
     >
       <nz-input-number
         style="width: 100%"
-        formControlName="password_expire"
+        formControlName="pwd_ttl"
         [nzFormatter]="formatterTimes"
         [nzMin]="0"
         [nzStep]="1"
