--- a/projects/integrate/admin/security/policy/session/session.component.html
+++ b/projects/integrate/admin/security/policy/session/session.component.html
@@ -12,7 +12,7 @@
     >
       <nz-input-number
         style="width: 100%"
-        formControlName="user_session_expire"
+        formControlName="session_ttl"
         [nzFormatter]="formatterSec"
         [nzMin]="0"
         [nzStep]="1"
