--- a/projects/integrate/admin/security/policy/policy.component.html
+++ b/projects/integrate/admin/security/policy/policy.component.html
@@ -4,11 +4,11 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>会话超时策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          用户在 {{ data['user_session_expire'] / 1000000000 }} 秒内没有操作，退出当前帐号。
+          用户在 {{ data['session_ttl'] }} 秒内没有操作，退出当前帐号。
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setSessionExpire()">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setSession()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -17,8 +17,7 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>帐号锁定策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          在 {{ data['user_lock_time'] / 1000000000 }} 秒内， 登录失败 {{ data['user_login_failed_times'] }} 次，
-          锁定帐号 {{ data['user_lock_time'] / 1000000000 }} 秒。
+          用户连续登录失败 {{ data['login_failures'] }} 次， 锁定帐号 {{ data['login_ttl'] }} 秒。
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
@@ -31,7 +30,7 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>IP 锁定策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          IP 连续 {{ data['ip_login_failed_times'] }} 次登录失败后（无白名单时启用），锁定 IP。
+          IP 连续 {{ data['ip_login_failures'] }} 次登录失败后（无白名单时启用），锁定 IP。
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
@@ -73,7 +72,7 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>密码强度策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          <ng-container [ngSwitch]="data['password_strength']">
+          <ng-container [ngSwitch]="data['pwd_strategy']">
             <ng-container *ngSwitchCase="0"> 无限制。 </ng-container>
             <ng-container *ngSwitchCase="1"> 需要大写字母和小写字母。 </ng-container>
             <ng-container *ngSwitchCase="2"> 需要大写字母、小写字母和数字。 </ng-container>
@@ -82,7 +81,7 @@
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setPasswordStrength()">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setPwdStrategy()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -91,14 +90,12 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>密码有效期策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          <ng-container *ngIf="data['password_expire'] === 0; else passwordExpire"> 永久有效 </ng-container>
-          <ng-template #passwordExpire>
-            {{ data['password_expire'] }} 天后密码过期，系统强制要求修改密码。
-          </ng-template>
+          <ng-container *ngIf="data['pwd_ttl'] === 0; else passwordExpire"> 永久有效 </ng-container>
+          <ng-template #passwordExpire> {{ data['pwd_ttl'] }} 天后密码过期，系统强制要求修改密码。 </ng-template>
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setPasswordExpire()">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setPwdTtl()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
