--- a/projects/integrate/nav/nav.component.html
+++ b/projects/integrate/nav/nav.component.html
@@ -1,26 +1,24 @@
 <ul nz-menu nzMode="inline" style="padding-top: 1px">
-  <ng-container *ngIf="!!wpx.navs">
-    <ng-container *ngTemplateOutlet="nav; context: { $implicit: wpx.navs }"></ng-container>
-    <ng-template #nav let-pages>
-      <ng-container *ngFor="let page of pages | wpxSort: 'sort'">
-        <ng-container *ngIf="page.kind !== 'group'; else isGroup">
-          <li nz-menu-item nzMatchRouter [routerLink]="['/pages', page['_id']]" [nzPaddingLeft]="page | Level">
-            <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page['icon']"></i>
-            <span>{{ page['name'] }}</span>
-          </li>
-        </ng-container>
-        <ng-template #isGroup>
-          <li nz-submenu [nzOpen]="openIds.has(page._id)" [nzPaddingLeft]="page | Level">
-            <span title>
-              <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page['icon']"></i>
-              <span>{{ page['name'] }}</span>
-            </span>
-            <ul>
-              <ng-container *ngTemplateOutlet="nav; context: { $implicit: page['children'] }"></ng-container>
-            </ul>
-          </li>
-        </ng-template>
+  <ng-container *ngTemplateOutlet="navTpl; context: { $implicit: wpxData }"></ng-container>
+  <ng-template #navTpl let-navs>
+    <ng-container *ngFor="let nav of navs | wpxSort: 'sort'">
+      <ng-container *ngIf="nav.kind !== 'group'; else isGroup">
+        <li nz-menu-item nzMatchRouter [routerLink]="['/pages', nav['_id']]" [nzPaddingLeft]="nav | Level">
+          <i *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></i>
+          <span>{{ nav['name'] }}</span>
+        </li>
       </ng-container>
-    </ng-template>
-  </ng-container>
+      <ng-template #isGroup>
+        <li nz-submenu [nzOpen]="openIds.has(nav._id)" [nzPaddingLeft]="nav | Level">
+          <span title>
+            <i *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></i>
+            <span>{{ nav['name'] }}</span>
+          </span>
+          <ul>
+            <ng-container *ngTemplateOutlet="navTpl; context: { $implicit: nav['children'] }"></ng-container>
+          </ul>
+        </li>
+      </ng-template>
+    </ng-container>
+  </ng-template>
 </ul>
