--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -3,7 +3,7 @@
 
   <nz-layout class="wpx-container">
     <nz-sider class="wpx-sider" nzTheme="light">
-      <wpx-nav></wpx-nav>
+      <wpx-nav [wpxData]="navs"></wpx-nav>
     </nz-sider>
     <nz-layout style="overflow: auto">
       <nz-content>
