--- a/projects/integrate/admin/application/factory/advanced/advanced.component.html
+++ b/projects/integrate/admin/application/factory/advanced/advanced.component.html
@@ -5,7 +5,7 @@
 <wpx-admin-factory-tabs [id]="id" [extra]="extra">
   <form nz-form id="form" nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
     <nz-form-item>
-      <nz-form-label nzRequired>启用事务补偿</nz-form-label>
+      <nz-form-label nzRequired>消息补偿</nz-form-label>
       <nz-form-control>
         <nz-switch formControlName="event"></nz-switch>
       </nz-form-control>
