--- a/projects/integrate/header/header.component.scss
+++ b/projects/integrate/header/header.component.scss
@@ -9,6 +9,11 @@ nz-header {
   box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
   background: #fff;
   transition: width 0.2s;
+  -webkit-app-region: drag;
+}
+
+.no-drag {
+  -webkit-app-region: no-drag;
 }
 
 .app-menu {
