--- a/projects/integrate/admin/application/factory/pages/pages.component.html
+++ b/projects/integrate/admin/application/factory/pages/pages.component.html
@@ -1,32 +1,22 @@
-<nz-row [nzGutter]="8">
-  <nz-col>
-    <button
-      style="margin-right: 8px"
-      nz-button
-      nzType="text"
-      [nz-tooltip]="expand ? '收起' : '展开'"
-      (click)="expanded()"
-    >
-      <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+<nz-space>
+  <button *nzSpaceItem nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">
+    <span nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></span>
+  </button>
+  <nz-input-group *nzSpaceItem style="width: 150px" nzSuffixIcon="search">
+    <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
+  </nz-input-group>
+  <nz-button-group *nzSpaceItem>
+    <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+      <span nz-icon nzType="reload"></span>
     </button>
-    <nz-input-group style="width: 150px" nzSuffixIcon="search">
-      <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
-    </nz-input-group>
-  </nz-col>
-  <nz-col>
-    <nz-button-group>
-      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
-        <i nz-icon nzType="reload"></i>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
-        <i nz-icon nzType="sisternode"></i>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">
-        <i nz-icon nzType="swap"></i>
-      </button>
-    </nz-button-group>
-  </nz-col>
-</nz-row>
+    <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
+      <span nz-icon nzType="sisternode"></span>
+    </button>
+    <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">
+      <span nz-icon nzType="swap"></span>
+    </button>
+  </nz-button-group>
+</nz-space>
 
 <nz-divider style="margin: 8px 0"></nz-divider>
 
