--- a/projects/integrate/header/header.component.html
+++ b/projects/integrate/header/header.component.html
@@ -6,7 +6,7 @@
           <nz-divider nzType="vertical"></nz-divider>
         </ng-template>
 
-        <button *nzSpaceItem nz-button nzType="text" nz-dropdown [nzDropdownMenu]="quick">
+        <button *nzSpaceItem class="no-drag" nz-button nzType="text" nz-dropdown [nzDropdownMenu]="quick">
           <i nz-icon nzType="appstore"></i>
           <nz-dropdown-menu #quick="nzDropdownMenu">
             <ul nz-menu nzSelectable>
@@ -16,10 +16,10 @@
           </nz-dropdown-menu>
         </button>
 
-        <nz-breadcrumb *nzSpaceItem [nzAutoGenerate]="wpx.manual">
+        <nz-breadcrumb *nzSpaceItem class="no-drag" [nzAutoGenerate]="wpx.manual">
           <ng-container *ngIf="!wpx.manual">
             <nz-breadcrumb-item>
-              <a [routerLink]="['/pages']"><i nz-icon nzType="home"></i> 我的应用</a>
+              <a [routerLink]="['/pages']">我的应用</a>
             </nz-breadcrumb-item>
             <ng-container *ngIf="wpx.pageId | async as current">
               <ng-container *ngFor="let page of current | Path | async">
@@ -37,14 +37,20 @@
     </nz-col>
     <nz-col>
       <nz-space>
-        <div *nzSpaceItem class="center" nz-popover [nzPopoverContent]="center" nzPopoverPlacement="bottomRight">
+        <div
+          *nzSpaceItem
+          class="center no-drag"
+          nz-popover
+          [nzPopoverContent]="center"
+          nzPopoverPlacement="bottomRight"
+        >
           <ng-container *ngIf="!!wpx.user">
             <nz-badge nzDot>
               <ng-container *ngIf="!!wpx.user.avatar; else defaultAvatar">
-                <nz-avatar nzShape="square" [nzSize]="24" [nzSrc]="[wpx.user.avatar] | wpxAssets"> </nz-avatar>
+                <nz-avatar nzShape="square" [nzSize]="24" [nzSrc]="[wpx.user.avatar] | wpxAssets"></nz-avatar>
               </ng-container>
               <ng-template #defaultAvatar>
-                <nz-avatar nzShape="square" [nzSize]="24" nzIcon="user"> </nz-avatar>
+                <nz-avatar nzShape="square" [nzSize]="24" nzIcon="user"></nz-avatar>
               </ng-template>
             </nz-badge>
             <span class="name">
