--- a/projects/integrate/nav/nav.component.html
+++ b/projects/integrate/nav/nav.component.html
@@ -4,14 +4,14 @@
     <ng-container *ngFor="let nav of navs | wpxSort: 'sort'">
       <ng-container *ngIf="nav.kind !== 'group'; else isGroup">
         <li nz-menu-item nzMatchRouter [routerLink]="['/pages', nav['_id']]" [nzPaddingLeft]="nav | Level">
-          <i *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></i>
+          <span *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></span>
           <span>{{ nav['name'] }}</span>
         </li>
       </ng-container>
       <ng-template #isGroup>
-        <li nz-submenu [nzOpen]="openIds.has(nav._id)" [nzPaddingLeft]="nav | Level">
+        <li nz-submenu [nzOpen]="openIds.has(nav['_id'])" [nzPaddingLeft]="nav | Level">
           <span title>
-            <i *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></i>
+            <span *ngIf="nav.hasOwnProperty('icon')" nz-icon [nzType]="nav['icon']"></span>
             <span>{{ nav['name'] }}</span>
           </span>
           <ul>
