--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,12 +1,12 @@
 .container {
-  margin: 9% auto 0;
-  width: 320px;
-  padding: 0 1em;
-  border-radius: 3px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  //margin: 9% auto 0;
+  //width: 320px;
+  //padding: 0 1em;
+  //border-radius: 3px;
+  //box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
   .logo {
-    padding: 24px 0;
+    padding: 24px 0 32px;
     text-align: center;
   }
 
