--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,12 +1,27 @@
-.container {
-  //margin: 9% auto 0;
-  //width: 320px;
-  //padding: 0 1em;
-  //border-radius: 3px;
-  //box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+nz-layout {
+  height: 100%;
+  background-color: #fff;
+}
 
+nz-header {
+  height: 45px;
+  line-height: 45px;
+  padding: 0 12px;
+  background: transparent;
+  -webkit-app-region: drag;
+
+  .title {
+    font-weight: 500;
+  }
+
+  .menubar {
+    -webkit-app-region: no-drag;
+  }
+}
+
+nz-card {
   .logo {
-    padding: 24px 0 32px;
+    padding: 24px 0 36px;
     text-align: center;
   }
 
