--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,28 +1,15 @@
-nz-layout {
-  height: 100%;
-  background-color: #fff;
-}
-
-nz-header {
-  height: 45px;
-  line-height: 45px;
-  padding: 0 12px;
-  background: transparent;
-  -webkit-app-region: drag;
-
-  .title {
-    font-weight: 500;
-  }
-
-  .menubar {
-    -webkit-app-region: no-drag;
-  }
-}
-
 nz-card {
+  margin: 9% auto 0;
+  width: 320px;
+  padding: 1em 0.5em 1.2em;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+
+
   .logo {
-    padding: 24px 0 36px;
+    height: 175px;
     text-align: center;
+    background: url("/assets/logo.png") no-repeat center;
+    background-size: 75%;
   }
 
   h2 {
