--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <div class="logo"> </div>
+    <div class="logo"></div>
     <form [formGroup]="form" nz-form (wpxSubmit)="submit($event)">
       <nz-form-item>
         <nz-form-control>
@@ -28,21 +28,18 @@
           <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid"> 登 录</button>
         </nz-form-control>
       </nz-form-item>
+
       <nz-divider nzPlain nzText="其他登录方式"></nz-divider>
       <nz-row nzJustify="space-between">
         <nz-col>
           <nz-space>
             <a *nzSpaceItem nz-tooltip="飞书" (click)="feishuOAuth()">
-              <nz-avatar
-                [nzSize]="30"
-                nzShape="square"
-                [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
-              ></nz-avatar>
+              <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
             </a>
           </nz-space>
         </nz-col>
         <nz-col></nz-col>
-        <nz-col><a nz-button nzShape="round" routerLink="/forget">忘记密码</a></nz-col>
+        <nz-col><a routerLink="/forget">忘记密码？</a></nz-col>
       </nz-row>
     </form>
   </nz-card>
