--- a/src/app/forget/forget.component.scss
+++ b/src/app/forget/forget.component.scss
@@ -1,4 +1,4 @@
-.container {
+nz-card {
   margin: 9% auto 0;
   padding: 24px;
   width: 600px;
@@ -14,4 +14,3 @@
   width: 320px;
   margin: 16px auto 0;
 }
-
