--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -30,20 +30,7 @@
       </nz-space>
     </nz-col>
     <nz-col>
-      <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item nzSelected>
-          <span nz-icon nzType="mail"></span>
-          Navigation One
-        </li>
-        <li nz-menu-item nzDisabled>
-          <span nz-icon nzType="appstore"></span>
-          Navigation Two
-        </li>
-        <li nz-menu-item nzDisabled>
-          <span nz-icon nzType="appstore"></span>
-          Navigation Three
-        </li>
-      </ul>
+      <ng-content></ng-content>
     </nz-col>
     <nz-col>
       <nz-space>
